css/parser/tests/errors/escaped/broken/output.stderr
error: Expected "}"
 --> $DIR/tests/errors/escaped/broken/input.css:2:18
  |
2 |     prop: "test\\
  |                  ^

